Create environment and environment revision (#314)
* Deleting the old dataservice implementation

* Create environment and environment revision
