# data-service/src/main/java/com/amazonaws/blox/dataservice/api/DataServiceApi.java
@@ -38,13 +38,24 @@ import com.amazonaws.blox.dataservicemodel.v1.model.wrappers.StartDeploymentRequ
 import com.amazonaws.blox.dataservicemodel.v1.model.wrappers.StartDeploymentResponse;
 import com.amazonaws.blox.dataservicemodel.v1.model.wrappers.UpdateEnvironmentRequest;
 import com.amazonaws.blox.dataservicemodel.v1.model.wrappers.UpdateEnvironmentResponse;
+import lombok.AllArgsConstructor;
+import lombok.NonNull;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
 
+@Slf4j
+@Component
+@AllArgsConstructor
 public class DataServiceApi implements DataService {
 
+  @NonNull private final CreateEnvironmentApi createEnvironmentApi;
+
   @Override
-  public CreateEnvironmentResponse createEnvironment(CreateEnvironmentRequest request)
+  public CreateEnvironmentResponse createEnvironment(
+      @NonNull final CreateEnvironmentRequest request)
       throws ResourceExistsException, InvalidParameterException, InternalServiceException {
-    return null;
+
+    return createEnvironmentApi.createEnvironment(request);
   }
 
   @Override
