# data-service/src/main/java/com/amazonaws/blox/dataservice/old/mapper/ApiModelMapper.java
@@ -1,76 +1,0 @@
-/*
- * Copyright 2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"). You may
- * not use this file except in compliance with the License. A copy of the
- * License is located at
- *
- *     http://aws.amazon.com/apache2.0/
- *
- * or in the "LICENSE" file accompanying this file. This file is distributed
- * on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
- * express or implied. See the License for the specific language governing
- * permissions and limitations under the License.
- */
-package com.amazonaws.blox.dataservice.old.mapper;
-
-import com.amazonaws.blox.dataservice.old.model.Environment;
-import com.amazonaws.blox.dataservice.old.model.EnvironmentVersion;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.Attribute;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.DeploymentConfiguration;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.EnvironmentType;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.InstanceGroup;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.wrappers.CreateEnvironmentRequest;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.wrappers.CreateEnvironmentResponse;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.wrappers.CreateTargetEnvironmentRevisionResponse;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.wrappers.DescribeEnvironmentResponse;
-import com.amazonaws.blox.dataservicemodel.v1.old.model.wrappers.DescribeTargetEnvironmentRevisionResponse;
-import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
-
-@Mapper
-public interface ApiModelMapper {
-
-  @Mapping(target = "environmentVersion", ignore = true)
-  @Mapping(target = "status", ignore = true)
-  @Mapping(target = "health", ignore = true)
-  @Mapping(target = "createdTime", ignore = true)
-  @Mapping(target = "lastUpdatedTime", ignore = true)
-  @Mapping(source = "environmentType", target = "type")
-  Environment toEnvironment(CreateEnvironmentRequest createEnvironmentRequest);
-
-  @Mapping(source = "type", target = "environmentType")
-  @Mapping(source = "health", target = "environmentHealth")
-  @Mapping(source = "status", target = "environmentStatus")
-  CreateEnvironmentResponse toCreateEnvironmentResponse(Environment environment);
-
-  CreateTargetEnvironmentRevisionResponse toCreateTargetEnvironmentRevisionResponse(
-      EnvironmentVersion environmentVersion);
-
-  DescribeEnvironmentResponse toDescribeEnvironmentResponse(Environment environment);
-
-  DescribeTargetEnvironmentRevisionResponse toDescribeTargetEnvironmentRevisionResponse(
-      EnvironmentVersion environmentVersion);
-
-  EnvironmentType toWrapperEnvironmentType(
-      com.amazonaws.blox.dataservice.old.model.EnvironmentType environmentType);
-
-  com.amazonaws.blox.dataservice.old.model.EnvironmentType toModelEnvironmentType(
-      EnvironmentType environmentType);
-
-  InstanceGroup toWrapperInstanceGroup(
-      com.amazonaws.blox.dataservice.old.model.InstanceGroup instanceGroup);
-
-  com.amazonaws.blox.dataservice.old.model.InstanceGroup toModelInstanceGroup(
-      InstanceGroup instanceGroup);
-
-  Attribute toWrapperAttribute(com.amazonaws.blox.dataservice.old.model.Attribute attribute);
-
-  com.amazonaws.blox.dataservice.old.model.Attribute toModelAttribute(Attribute attribute);
-
-  DeploymentConfiguration toWrapperDeploymentConfiguration(
-      com.amazonaws.blox.dataservice.old.model.DeploymentConfiguration deploymentConfiguration);
-
-  com.amazonaws.blox.dataservice.old.model.DeploymentConfiguration toModelDeploymentConfiguration(
-      DeploymentConfiguration deploymentConfiguration);
-}
